# Timluli

./: .gitignore  BUILDING.md  LICENSE  README.md  gen_icon.py  package-lock.json  package.json  run.bat  vite.config.js
.github/workflows/: pages.yml  release.yml
design/: settings-redesign.html
design/smoke/: README.md  golden-contract.json  tauri-mock.js
landing/: index.html
src/: index.html  mic.html  onboarding.html  panel.html  settings.html  speech.html  video-options.html
src-tauri/: .taurignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: models.toml
src-tauri/sidecar/: build_sidecar.ps1  test_layout.py  timluli_pdf.py
src-tauri/sidecar/fonts/: README.md
src-tauri/sidecar/glossaries/: he_telecom.json
src-tauri/sidecar/tests/: README.md  test_helpers.py
src-tauri/src/: chrome_sidecar.rs  commands.rs  commands_gender.rs  commands_local.rs  commands_punct.rs  commands_video.rs  double_tap.rs  field_tracker.rs  gender_f0.rs  gender_onnx.rs  gender_text.rs  lib.rs  main.rs  onnx_runtime.rs  panel.rs  secrets.rs  settings.rs  shortcut.rs  text_injection.rs  topmost_keeper.rs  tray.rs  updater.rs  win_util.rs
src-tauri/src/models/: manager.rs  mod.rs  registry.rs  storage.rs  types.rs
src-tauri/src/punctuation/: engine.rs  mod.rs
src-tauri/src/subtitle_burn/: ass.rs  mod.rs  srt_parse.rs
src-tauri/src/transcription/: groq.rs  local.rs  mod.rs
src-tauri/src/translation/: docx.rs  mod.rs  parser.rs  pdf.rs  provider.rs
src-tauri/src/video_transcription/: ffmpeg.rs  groq_srt.rs  mod.rs  srt.rs  words.rs
src-tauri/src/whisper_local/: audio.rs  inference.rs  mod.rs
src/scripts/: mic.js  onboarding.js  panel.js  settings.js  speech.js  video-options.js
src/styles/: mic.css  onboarding.css  panel.css  settings.css  shared.css  speech.css  video-options.css
