[package]
name = "timluli"
version = "1.17.0"
description = "Hebrew speech-to-text system-wide for Windows"
authors = ["Daniel Oliel <ddlgap@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "timluli_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
# GPU-accelerated local inference via Vulkan. Opt-in: the default build stays
# CPU-only and needs no extra tooling. Enabling `gpu` requires the Vulkan SDK at
# build time (VULKAN_SDK + glslc) and a SHORT build path on Windows — the
# ggml-vulkan shader build overruns MAX_PATH under deep target dirs, so build
# with a short CARGO_TARGET_DIR (e.g. C:\tl). At runtime it auto-detects a Vulkan
# device and falls back to CPU when none is present (or the loader is missing).
# Release builds enable this in CI; see docs/gpu-acceleration.md.
gpu = ["whisper-rs/vulkan"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
dirs = "5"
toml = "0.8"
sha2 = "0.10"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json", "multipart"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
tokio = { version = "1", features = ["fs", "io-util", "rt-multi-thread", "macros", "sync"] }
base64 = "0.22"
tiny_http = "0.12"
num_cpus = "1"
rubato = "0.15"
symphonia = { version = "0.5", default-features = false, features = ["mp3", "aac", "isomp4", "alac", "flac", "wav", "pcm", "adpcm", "ogg", "vorbis"] }
whisper-rs = "0.16" # Vulkan GPU backend is opt-in via the `gpu` feature (see [features]).
pdf-extract = "0.10.0"
docx-rust = "0.1.11"
# Hebrew auto-punctuation: in-process ONNX (load-dynamic → bundled onnxruntime.dll,
# NOT statically linked) + HF tokenizers. See src/punctuation/. onnxruntime.dll must
# be 1.22.x to match ort rc.10 and is bundled app-locally like the vcruntime DLLs.
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["load-dynamic", "ndarray"] }
# default-features off drops `esaxx_fast` (a C++ dep built with /MT static-CRT, which
# clashes with whisper-rs-sys's /MD → LNK2038). We only do inference; keep just `onig`.
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_DataExchange",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }
uiautomation = { version = "0.24", features = ["event"] }

[profile.dev]
# Disable debug info to keep peak compile memory under control on low-RAM
# Windows hosts. Tauri's main crate hits rustc-LLVM OOM with default debug=2.
debug = 0
incremental = true
split-debuginfo = "off"

[profile.release]
panic = "abort"
# thin LTO + multiple codegen units keeps link-time memory under control on
# low-RAM hosts. Loses ~5% binary size vs full LTO with codegen-units=1.
codegen-units = 16
lto = "thin"
opt-level = "s"
strip = true
debug = 0
